<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frame"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".DetailActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:id="@+id/scroll_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_remaining"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_level"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_performance"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_health"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_resource"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_plug_source"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_maximum"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_scale"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_status"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_status"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_type"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_technology"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_temperature"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_temperature"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:gravity="start|center"
                            android:text="@string/detail_voltage"
                            android:textSize="@dimen/font_Small" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/border"
                            android:textSize="@dimen/font_Middle" />

                        <TextView
                            android:id="@+id/battery_voltage"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="6.5"
                            android:textSize="@dimen/font_Middle" />

                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>